Fix: Sidebar - Overlap with system default theme #461

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -7286,7 +7286,8 @@
     direction: rtl;
   }
 
-  #sidebar-header {
+  #sidebar-header,
+  #sidebar {
     background-color: var(--sidebar-background-color) !important;
     color: var(--sidebar-text-color) !important;
     overflow: hidden;
